###### TWE 5.2-1 RELEASED ######
2015-08-21 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - Support for VariableToProcess_FETCH extended attribute
      - Improved:
         * panel for actual parameters (now considering if formal parameter is array and offering only the array variables in that case)
         * the background color of combo-box now properly set
         * the background color of list panel for selecting participants when many now properly set
         * checking and updating Variable/XPDLString/I18n variable ids inside BeanShell/JavaScript script expression
         * checking and updating I18n variable ids inside InitialValue expression
         * showing text panel instead of editable combo-box for i18n variables
         * not showing system variables/variables/xpdl strings/i18n variables for XSLT tool agent Application definition
         * now considering variable ids in the actual parameter which map to XPath application parameter ResultVariableIds
      - Fixed:
         * bug that occured sometime when updating i18n varible Id in referencing elements
         * bug that showed email panel in edit mode even in the case package is external or transient

2015-08-10 Sasa Bojanic <sasaboy@together.at>
   # Now validating unused applications and participants

2015-08-03 Sasa Bojanic <sasaboy@together.at>
   # Now configuring JSplitPane's divider positions (MainDividerLocation, FirstSmallDividerLocation and SecondSmallDividerLocation properties) in percentage (not in an absolute values)
   # Shark mode:
      - support for AUTO_COMPLETION extended attribute for manual activities
      - improved performance and accuracy when moving entries for the Activity's 'Web client configuration->Default GUI->Variables'

2015-07-31 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - allowing i18n variables to be used when creating variables' InitialValue expression
      
2015-07-27 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: