@@ -11562,6 +11562,9 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
 
           <para>- Fixed: bug that showed email panel in edit mode even in the
           case package is external or transient</para>
+
+          <para>- Fixed: repositioning of XPDLString variables inside table is
+          now working</para>
         </listitem>
       </itemizedlist>
     </section>
